# opengl

./: Cargo.toml  shell.nix
nix/: glfw.nix  rust.nix  sources.json
src/: main.rs  object.rs  shader.frag.glsl  shader.rs  shader.vert.glsl
