[package]
name = "opengl"
version = "0.1.0"
authors = ["Aamaruvi Yogamani <38222826+Technical27@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
glfw = { version = "0.40", default-features = false }
image = "0.23"
nalgebra-glm = "0.8"
